tests/nullable/__snapshots__/jsfmt.spec.js.snap
exports[`test maybe.js 1`] = `
"// @flow

// unwrapping nested maybes should work
((\'foo\': ?(?string)): ?string); // ok
((123: ?(?number)): ?string); // error (only num ~> string)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
// unwrapping nested maybes should work
((\"foo\": ??string): ?string);// ok
((123: ??number): ?string);// error (only num ~> string)

"
`;

exports[`test nullable.js 1`] = `
"function foo():string { return null; }

function bar():?string { return null; }

function qux(x:string) { }

function corge(x:number) { }

var x = bar(); // x: ?string
if (x != null) qux(x); // x: ?string | null
if (x != null) corge(x); // x: ?string | null

function grault() { x = null; }
if (x != null) {
  grault(); qux(x);
}

var array_of_nullable: Array<?number> = [null, 3];
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1497
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1497:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1374:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;

exports[`test simple_nullable.js 1`] = `
"function foo(x:?string) {}
function bar(x:?number) {}
foo(\'hmm\');
bar(\'hmm\');

function fn(data: ?{}) {}
fn({some: \'literal\'});
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function foo(x: ?string) {
  
}
function bar(x: ?number) {
  
}
foo(\"hmm\");
bar(\"hmm\");
function fn(data: ?{}) {
  
}
fn({ some: \"literal\" });

"
`;
